Fix image positions on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,12 @@
     border-radius: 50%;
     vertical-align: middle;
 }
-
+@media only screen and (max-width: 992px) {
+    #facepic{
+        margin-left: 10%;
+    }
+}
+    
 .about {
     font-size: 18px;
 }
